# gatewayDemo/docs/swagger.json
@@ -1088,7 +1088,7 @@
                 "access_control": {
                     "$ref": "#/definitions/dao.ServiceAccessControl"
                 },
-                "gprc": {
+                "grpc": {
                     "$ref": "#/definitions/dao.ServiceGRPCRule"
                 },
                 "http": {
@@ -1451,10 +1451,9 @@
         "dto.ServiceAddGRPCInput": {
             "type": "object",
             "required": [
-                "forbid_list",
                 "ip_list",
                 "port",
-                "serbice_desc",
+                "service_desc",
                 "service_name",
                 "weight_list"
             ],
@@ -1491,7 +1490,7 @@
                     "description": "db.gateway_service_load_balance\n轮询方式 0=random 1=round_robin 2=wieght_round_robin 3=ip_hash",
                     "type": "integer"
                 },
-                "serbice_desc": {
+                "service_desc": {
                     "description": "服务描述",
                     "type": "string"
                 },
